# space_game_api

./: .gitignore  Cargo.toml  dockerfile
.sqlx/: query-e80fcbdf22c290ebfa0e4f680230db4bb9b50f2c7c1af4d03f969b68dcc3c0ab.json  query-f1c853802dbeaa8569e9fb4a7d616a522dae21d9106bcd3b744d4ea45cdf3165.json
migrations/: 20260321172851_create_scores.sql
src/: db.rs  main.rs  models.rs
src/mq/: mod.rs
src/routes/: mod.rs  scores.rs
