[package]
name = "space_game_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio={version="1",features=["rt-multi-thread","net","macros"]}
axum="0.8"
sqlx={version="0.8", features=["runtime-tokio","postgres","chrono"]}
serde={version="1",features=["derive"]}
serde_json="1"
chrono={version="0.4",features=["serde"]}
dotenvy="0.15"
lapin="4.4.0"